[gd_scene load_steps=2 format=3 uid="uid://terrain_ui"]

[ext_resource type="Script" path="res://scripts/TerrainUI.gd" id="1"]

[node name="TerrainUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1")

[node name="ControlPanel" type="Panel" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 410.0

[node name="VBoxContainer" type="VBoxContainer" parent="ControlPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="TitleLabel" type="Label" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Heightmap Terrain Controls"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="LoadButton" type="Button" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Load Heightmap"

[node name="TestButton" type="Button" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Generate Test Heightmap"

[node name="HSeparator2" type="HSeparator" parent="ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="ChunkSizeLabel" type="Label" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Chunk Size:"

[node name="ChunkSizeContainer" type="HBoxContainer" parent="ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="ChunkSizeSlider" type="HSlider" parent="ControlPanel/VBoxContainer/ChunkSizeContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 8.0
max_value = 64.0
step = 8.0
value = 32.0

[node name="ChunkSizeLabel" type="Label" parent="ControlPanel/VBoxContainer/ChunkSizeContainer"]
layout_mode = 2
custom_minimum_size = Vector2(40, 0)
text = "32"
horizontal_alignment = 2

[node name="HeightScaleLabel" type="Label" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Height Scale:"

[node name="HeightScaleContainer" type="HBoxContainer" parent="ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="HeightScaleSlider" type="HSlider" parent="ControlPanel/VBoxContainer/HeightScaleContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 50.0
value = 10.0

[node name="HeightScaleLabel" type="Label" parent="ControlPanel/VBoxContainer/HeightScaleContainer"]
layout_mode = 2
custom_minimum_size = Vector2(40, 0)
text = "10"
horizontal_alignment = 2

[node name="ChunksLabel" type="Label" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Chunks per Side:"

[node name="ChunksContainer" type="HBoxContainer" parent="ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="ChunksSlider" type="HSlider" parent="ControlPanel/VBoxContainer/ChunksContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 10.0
value = 4.0

[node name="ChunksLabel" type="Label" parent="ControlPanel/VBoxContainer/ChunksContainer"]
layout_mode = 2
custom_minimum_size = Vector2(40, 0)
text = "4x4"
horizontal_alignment = 2

[node name="HSeparator3" type="HSeparator" parent="ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Ready"
autowrap_mode = 2

[node name="HSeparator4" type="HSeparator" parent="ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="HeightmapPreview" type="TextureRect" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(280, 140)
expand_mode = 1
stretch_mode = 5

[node name="ViewContainer" type="HBoxContainer" parent="ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="TopDownButton" type="Button" parent="ControlPanel/VBoxContainer/ViewContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Top-Down View"

[node name="PerspectiveButton" type="Button" parent="ControlPanel/VBoxContainer/ViewContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Perspective View"

[node name="RenderContainer" type="HBoxContainer" parent="ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="WireframeButton" type="Button" parent="ControlPanel/VBoxContainer/RenderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Wireframe"

[node name="SolidButton" type="Button" parent="ControlPanel/VBoxContainer/RenderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Solid"

[node name="BakeButton" type="Button" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Project Image onto Terrain"

[node name="HSeparator5" type="HSeparator" parent="ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="ActivityToggle" type="Button" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
text = "▶ Show Activity Log"
flat = true
alignment = 0

[node name="HSeparator6" type="HSeparator" parent="ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Camera Controls:"

[node name="ControlsText" type="RichTextLabel" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 100)
text = "Arrow Keys: Move
Q/E: Up/Down
Right Click + Drag: Rotate
Shift: Move Faster"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Select Heightmap Image"
size = Vector2i(800, 600)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.png", "*.jpg", "*.jpeg", "*.bmp", "*.exr", "*.tga")

[node name="ProjectionDialog" type="FileDialog" parent="."]
title = "Select Image to Project onto Terrain"
size = Vector2i(800, 600)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.png", "*.jpg", "*.jpeg", "*.bmp", "*.tga")

[node name="ActivityPanel" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_right = -10.0
offset_top = 10.0
offset_bottom = -10.0
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="ActivityPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="TitleLabel" type="Label" parent="ActivityPanel/VBoxContainer"]
layout_mode = 2
text = "Activity Log"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ActivityPanel/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="ActivityPanel/VBoxContainer"]
layout_mode = 2
text = "✕ Close"
flat = true
alignment = 0

[node name="ActivityLog" type="ScrollContainer" parent="ActivityPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActivityText" type="RichTextLabel" parent="ActivityPanel/VBoxContainer/ActivityLog"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[color=gray]Activity log will appear here...[/color]"
fit_content = true